libavformat/dashdec: Fix for ticket 6856 (filename limited to 1024)